# dd-trace-cpp

./: .gitignore  CMakeLists.txt  Dependency.cmake
.github/workflows/: cmake-multi-platform.yml
benchmark/: CMakeLists.txt
cmake/: SetupProject.cmake
fuzz/w3c-propagation/: CMakeLists.txt
src/datadog/: tracer_config.cpp
test/: test_curl.cpp  test_span.cpp
